@@ -6,7 +6,32 @@ table.admin-apachesolr td.icon {
 table.admin-apachesolr td.operation {
   width: 16px;
 }
-tr.apachesolr-selected td.icon {
-  background-image: url(task-check.png);
+table.admin-apachesolr tr.ok {
+  background-color : #E5FFE2;
+}
+table.admin-apachesolr tr.error {
+  color: #8C2E0B;
+  background-color : #FEF5F1;
 }
 
+table.admin-apachesolr td.status-icon {
+  width: 16px;
+  padding-right: 0;
+}
+table.admin-apachesolr td.status-icon div {
+  background-repeat: no-repeat;
+  height: 16px;
+  width: 16px;
+}
+table.admin-apachesolr tr {
+  border-bottom: 1px solid #ccc;
+}
+
+table.admin-apachesolr tr td.default-environment {
+  font-weight: bold;
+  font-style: italic;
+}
+
+table.admin-apachesolr tr.error td.status-icon div {
+  background-image: url(/misc/message-16-error.png);
+}
