@@ -4,6 +4,7 @@ Apache Solr integration 7.x-1.x-xxxx, xxxx-xx-xx
 
 Apache Solr integration 7.x-1.0-xxxx, 2011-xx-xx
 ------------------------------
+#1300380 by Nick_vh, pwolanin: Search environments not clear about being active or online.
 #1294846 by Nick_vh: Added Refactoring of the search pages.
 #1188824 by pwolanin: fix for very large watchdog entries when index is in read-only mode.
 #1270826 by pwolanin, brianV: fix for search page regex fails for complex queries.
